-e 问题: 搭建app的主体ui框架 原因: 解决方案: Reviewer: 工单号: X Log: X

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">ZiWu</string>
+
+
+    <string name="add_plan_today">每日计划</string>
+    <string name="add_plan_this_week">每周计划</string>
+    <string name="add_plan_long_time">长期计划</string>
+
+    <string name="bottom_indicator_plan">计划</string>
+    <string name="bottom_indicator_record">记录</string>
+    <string name="bottom_indicator_me">我的</string>
 </resources>
