-e 问题: 添加数据库和表的创建，计划详情页； 原因: 解决方案: Reviewer: 工单号: X Log: X

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="bottom_indicator_plan">计划</string>
     <string name="bottom_indicator_record">记录</string>
     <string name="bottom_indicator_me">我的</string>
+
+    <string name="add_plan_detail_ok">确定</string>
+    <string name="add_plan_detail_cancel">取消</string>
+
+    <string name="add_plan_detail_edit_name">名称</string>
+    <string name="add_plan_detail_edit_add">添加</string>
+    <string name="add_plan_detail_edit_more">更多选项</string>
 </resources>
