--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="plan_today">今天</string>
     <string name="plan_this_week">近七天</string>
     <string name="plan_long_time">长期计划</string>
-    <string name="ad_item_plan_no_plan">暂无计划</string>
+    <string name="ad_item_plan_no_plan">还没有制定计划哦</string>
+    <string name="ad_item_plan_no_plan_add">快来制定计划吧</string>
     <string name="ad_item_plan_recorded_time">%1$s已经进行了%2$s</string>
     <string name="ad_item_plan_record_start">开始</string>
     <string name="ad_item_plan_record_stop">停止</string>
@@ -35,5 +36,5 @@
     <string name="add_plan_summary_delete">删除</string>
     <string name="add_plan_detail_edit_text_name_no_string">计划名称不能为空</string>
 
-
+    <string name="fr_record_today_plan">今日计划</string>
 </resources>
