-e 问题: 解决通知栏的问题和重构planAdapter（部分） 原因: 解决方案: Reviewer: 工单号: X Log: X

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="add_plan_detail_edit_text_name_no_string">计划名称不能为空</string>
 
     <string name="fr_record_today_plan">今日计划</string>
+    <string name="notification_start_time">00:00:00</string>
 </resources>
