按照日期对记录进行逐条展示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,9 @@
     <string name="text_delete_confirm">删除%s</string>
     <string name="text_delete">删除</string>
     <string name="text_delete_description">此操作会删除所有的数据，删除后数据不可恢复，确定删除吗？</string>
+
+    <string name="save_modify">保存</string>
+    <string name="cancel_modify">取消</string>
+
+    <string name="before_today">今天以前</string>
 </resources>
