--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,7 @@
     <string name="before_today">今天以前</string>
     <string name="add_new_task">添加任务</string>
     <string name="task_note">备注</string>
+    <string name="record_category_all">全部分类</string>
+    <string name="record_time_duration_select">时长</string>
+    <string name="record_search">搜索</string>
 </resources>
