--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="record_this_week">本周</string>
     <string name="record_time_longest">时间最长</string>
     <string name="search_history">历史记录</string>
+    <string name="clear_search_history">清空记录</string>
 </resources>
